--- a/Lesson-3/app.html
+++ b/Lesson-3/app.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         .h1 {
-            color: rgb(60, 153, 17);
+            color: rgb(153, 17, 101);
         }
 
         .h2 {
@@ -21,7 +21,7 @@
         <h1 class="h1">Hello World</h1>
         <h2 class="h2">Trrrr</h2>
     </div>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
