--- a/Lesson-2.3/lesson-2.3.html
+++ b/Lesson-2.3/lesson-2.3.html
@@ -16,7 +16,7 @@
     <div>
         <h1 class="h1">Hello World</h1>
     </div>
-    <script src="app.js"></script>
+    <script src="/Lesson-2.3/lesson-2.3.js"></script>
 </body>
 
 </html>
